# evalkit

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: README.md  design_decisions.md  statistical_methods.md
evalkit/: __init__.py  cli.py
evalkit/analysis/: __init__.py  power.py  report.py  rigour.py
evalkit/api/: app.py
evalkit/core/: __init__.py  dataset.py  experiment.py  judge.py  runner.py
evalkit/metrics/: __init__.py  accuracy.py  agreement.py  base.py  comparison.py
evalkit/providers/: __init__.py  base.py
examples/: README.md  benchmark_audit.py  full_workflow.py  openai_quickstart.py  walkthrough.ipynb
examples/data/: README.md  balanced_demo.jsonl  factual_qa_50.jsonl  underpowered_imbalanced_demo.jsonl
tests/: conftest.py
tests/analysis/: test_power.py  test_rigour.py
tests/core/: test_api.py  test_cli.py  test_dataset.py  test_experiment.py  test_experiment_features.py  test_judge.py  test_providers.py  test_report.py  test_runner.py  test_runner_advanced.py
tests/metrics/: test_accuracy.py  test_agreement.py  test_base.py  test_comparison.py
