[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evalkit-research"
version = "0.2.0"
description = "Rigorous LLM evaluation: bootstrap CIs, significance testing, and automated statistical auditing"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Bonnie McConnell", email = "bonniep.mcconnell@gmail.com" }]
keywords = ["llm", "evaluation", "statistics", "nlp", "benchmark"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "rich>=13.7",
    "typer>=0.9",
    "jinja2>=3.1",
]

[project.optional-dependencies]
openai = ["openai>=1.10"]
anthropic = ["anthropic>=0.18"]
api = [
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
]
generation = [
    "nltk>=3.8",
    "rouge-score>=0.1.2",
]
dataframe = [
    "pandas>=2.0",
]
huggingface = [
    "datasets>=2.16",
]
agreement = [
    "krippendorff>=0.6",
]
all = [
    "evalkit-research[openai,anthropic,api,generation,huggingface,agreement,dataframe]",
]
dev = [
    "evalkit-research[all]",
    "sentence-transformers>=2.2",
    "datasets>=2.16",
    "pandas>=2.0",
    "jupyter>=1.0",
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.2",
    "mypy>=1.8",
    "httpx>=0.26",
]

[project.scripts]
evalkit = "evalkit.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["evalkit*"]

[tool.setuptools.package-data]
evalkit = ["py.typed"]

[project.urls]
Homepage = "https://github.com/bonnie-mcconnell/evalkit"
Repository = "https://github.com/bonnie-mcconnell/evalkit"
"Bug Tracker" = "https://github.com/bonnie-mcconnell/evalkit/issues"
Changelog = "https://github.com/bonnie-mcconnell/evalkit/blob/main/CHANGELOG.md"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
# report.py embeds CSS/HTML strings that cannot be broken at 100 chars
"evalkit/analysis/report.py" = ["E501"]
# judge.py contains multi-line prompt strings that must remain intact
"evalkit/core/judge.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
# No coverage by default - contributors can run `pytest` quickly.
# For coverage: `pytest --cov=evalkit` or `make check` (what CI runs).
addopts = "--tb=short"
